[project]
name = "mcp-server-deepdive-functionality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "mcp[cli]>=1.12.3",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "pyscreeze>=0.1.28",
    "requests>=2.32.4",
]
